Remove stretchesToMinIntrinsicLogicalWidth https://bugs.webkit.org/show_bug.cgi?id=110266
Reviewed by Emil Eklund.

This was only used by fieldsets and now we have a way to express this
concept in CSS.

* WebCore.order:
* css/html.css:
Make fieldsets min-width: -webkit-min-content.

* rendering/RenderBox.cpp:
(WebCore::RenderBox::computeLogicalWidthInRegion):
(WebCore::RenderBox::computePositionedLogicalWidth):
* rendering/RenderBox.h:
Remove all calls to stretchesToMinIntrinsicLogicalWidth.

Canonical link: https://commits.webkit.org/128657@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143479 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/css/html.css
+++ b/Source/WebCore/css/html.css
@@ -393,7 +393,8 @@ fieldset {
     -webkit-padding-start: 0.75em;
     -webkit-padding-end: 0.75em;
     -webkit-padding-after: 0.625em;
-    border: 2px groove ThreeDFace
+    border: 2px groove ThreeDFace;
+    min-width: -webkit-min-content;
 }
 
 button {
